# metatree

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: demo.yml
action/: README.md  action.yml  requirements.txt
action/src/: impact_analysis.py
action/tests/: test_impact_analysis.py
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  main.rs  spec.rs
cli/src/commands/: configure.rs  describe.rs  lineage.rs  mcp.rs  mod.rs  patch.rs  quality.rs  search.rs
cli/tests/: integration.rs
docs/: video-script.md
scripts/: get_local_jwt.py  seed_local_sample.py
vscode-extension/: .eslintrc.json  README.md  package-lock.json  package.json
vscode-extension/src/: client.ts  extension.ts  lineageHtml.ts  parsing.ts  quality.ts
vscode-extension/src/panels/: lineagePanel.ts
vscode-extension/src/providers/: hoverProvider.ts  lineageProvider.ts  qualityProvider.ts
vscode-extension/src/test/: runUnit.ts
