[package]
name = "ometa"
version = "0.1.0"
edition = "2021"
description = "MetaTree CLI for OpenMetadata: search, describe, lineage, quality, patch, MCP proxy."
license = "Apache-2.0"
authors = ["MetaTree contributors"]
readme = "README.md"
repository = "https://github.com/your-org/metatree"

[[bin]]
name = "ometa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }
anyhow = "1"
colored = "2"
tabled = "0.15"
indicatif = "0.17"
dirs = "5"
toml = "0.8"
axum = "0.7"

[dev-dependencies]
mockito = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
